--- a/index.html
+++ b/index.html
@@ -5,7 +5,43 @@
     <link rel="icon" type="image/svg+xml" href="/logo 2.png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>Luxury Room</title>
+
+    <!-- Structured Data JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LodgingBusiness",
+      "name": "Luxury Room",
+      "description": "Luxury Room adalah penginapan apartemen murah di Jogja, cocok untuk staycation nyaman dan strategis.",
+      "url": "https://luxuryroom.vercel.app",
+      "logo": "https://luxuryroom.vercel.app/logo-2.png",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Yogyakarta",
+        "addressCountry": "ID"
+      }
+    }
+    </script>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Luxury Room adalah penginapan apartemen murah di Jogja, cocok untuk staycation nyaman dan strategis." />
+    <meta name="keywords" content="penginapan jogja, apartemen murah jogja, luxury room, staycation jogja" />
+    <meta name="author" content="Luxury Room Team" />
+
+    <!-- Open Graph (Facebook, WhatsApp, dll) -->
+    <meta property="og:title" content="Luxury Room - Penginapan Apartemen Murah di Jogja" />
+    <meta property="og:description" content="Nikmati kenyamanan staycation di Jogja dengan harga terjangkau di Luxury Room." />
+    <meta property="og:image" content="https://luxuryroom.vercel.app/og-image.jpg" />
+    <meta property="og:url" content="https://luxuryroom.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Luxury Room - Penginapan Apartemen Murah di Jogja" />
+    <meta name="twitter:description" content="Nikmati kenyamanan staycation di Jogja dengan harga terjangkau di Luxury Room." />
+    <meta name="twitter:image" content="https://luxuryroom.vercel.app/og-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
